Termina html y css sobre nosotros

--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
 
         </div>
     </header>
+
+    <section class="contenedor mt-5 nosotros">
+        <div class="contenido-nosotros">
+            <h2>Sobre Nosotros</h2>
+            <p>Lorem ipsum dolor sit,  sed, voluptates, unde tempora? Corporis, numquam. Sapiente laborum voluptatem molestias magni maiores?</p>
+            <p>Lorem ipsum dolor sit amet,  itaque illo recusandae quisquam quas sequi esse libero vitae ut assumenda iste distinctio laudantium!</p>
+        </div>
+    </section>
 </body>
 </html>
