--- a/index.html
+++ b/index.html
@@ -48,5 +48,36 @@
             <p>Lorem ipsum dolor sit amet,  itaque illo recusandae quisquam quas sequi esse libero vitae ut assumenda iste distinctio laudantium!</p>
         </div>
     </section>
+
+    <main class="contenedor mt-5">
+        <h2>Conoce nuestros 3 modelos</h2>
+        <div class="modelo basico">
+            <div class="contenido-modelo">
+                <h3>Modelo Básico</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corrupti explicabo nostrum expedita suscipit numquam? Magni, ea expedita sapiente quo saepe ab est nostrum?</p>
+                <a class="btn" href="#">Más información</a>
+            </div>
+        </div> <!--finaliza modelo-->
+
+        <div class="modelo premier">
+            <div class="contenido-modelo">
+                <h3>Modelo Premier</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corrupti explicabo nostrum expedita suscipit
+                    numquam? Magni, ea expedita sapiente quo saepe ab est nostrum?</p>
+                <a class="btn" href="#">Más información</a>
+            </div>
+        </div>
+        <!--finaliza modelo-->
+
+        <div class="modelo elite">
+            <div class="contenido-modelo">
+                <h3>Modelo Élite</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est corrupti explicabo nostrum expedita suscipit
+                    numquam? Magni, ea expedita sapiente quo saepe ab est nostrum?</p>
+                <a class="btn" href="#">Más información</a>
+            </div>
+        </div>
+        <!--finaliza modelo-->
+    </main>
 </body>
 </html>
