Termina resposive galería

--- a/index.html
+++ b/index.html
@@ -79,5 +79,20 @@
         </div>
         <!--finaliza modelo-->
     </main>
+
+    <section class="contenedor mt-5">
+        <h2>Galería</h2>
+        <div class="galeria">
+            <div class="imagen"> <img src="img/imagen_1.jpg" alt="imagen_1"></div>
+            <div class="imagen"> <img src="img/imagen_2.jpg" alt="imagen_2"></div>
+            <div class="imagen"> <img src="img/imagen_3.jpg" alt="imagen_3"></div>
+            <div class="imagen"> <img src="img/imagen_4.jpg" alt="imagen_4"></div>
+            <div class="imagen"> <img src="img/imagen_5.jpg" alt="imagen_5"></div>
+            <div class="imagen"> <img src="img/imagen_6.jpg" alt="imagen_6"></div>
+            <div class="imagen"> <img src="img/imagen_7.jpg" alt="imagen_7"></div>
+        </div>
+
+    </section>
+
 </body>
 </html>
